# stewart-platform

./: README.md
ArduinoProgramm/ConnectImuMotorRos2/: ConnectImuMotorRos2.ino  Function_SpeedCalculation
ArduinoProgramm/imuRos2/: imuRos2.ino
ArduinoProgramm/motorController/: motorController.ino
ArduinoProgramm/motorControllerRos2/: Integrationtest.txt  motorControllerRos2.ino
ArduinoProgramm/motorController_Test/: motorController_Test.ino
ballControllerForRos2Src/ballPositonMeasure/: package.xml  setup.cfg  setup.py
ballControllerForRos2Src/ballPositonMeasure/ballPositonMeasure/: ballPositonMeasure.py
ballControllerForRos2Src/controller_pid/: CMakeLists.txt  package.xml  readme.md
ballControllerForRos2Src/controller_pid/src/: Camera.cpp  Controller.cpp  Motor.cpp
ballControllerForRos2Src/cpp_pubsub/: CMakeLists.txt  package.xml  readme
ballControllerForRos2Src/cpp_pubsub/src/: Controller.cpp
motorController/: motorController.ino
motorControllerRos2/: motorControllerRos2.ino
opnmvProgramm/: ballPositionOnpenMv.py
slefBalanceForRos2Src/: README.md
slefBalanceForRos2Src/stewart2/: CMakeLists.txt
slefBalanceForRos2Src/stewart2/launch/: stewart2_launch.py
slefBalanceForRos2Src/stewart2/sdf/stewart/: model.sdf.erb
slefBalanceForRos2Src/stewart2/src/: ForwardKinematicsStewart2.cpp  ImuAnalyse.cpp  InverseKinematicsStewart2.cpp  gazeboBillotController2.cpp
slefBalenceForRos2Src/stewart2/: package.xml
slefBalenceForRos2Src/stewart2/sdf/stewart/: model.sdf
slefBalenceForRos2Src/stewart2/src/: ImuAnalyse.cpp  InverseKinematicsStewart2.cpp
slefBalenceForRos2Src/stewart2/world/: stewart.world
